(library
  (name TestCases)
  (public_name test.test-cases.lib)
  ; IMPORTANT: -linkall flag is required to include all tests.
  (ocamlopt_flags -linkall -g)
  (flags :standard
    ; Fix the following flags:
    -w -33 -w -6 -w -39 -w -35
    ; Unused
    -w -27
    ; Incomplete record pattern (okay)
    -w -9
    -w -33 -w -32)
  (libraries
    BL.lib
    rely.lib
  )
)

(include_subdirs unqualified)
;(dirs :standard __tests__)
